--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Your App Name Here</title>
+    <title>LSTM Learning Lab</title>
     <link rel="shortcut icon" href="favicon.svg" />
     <link rel="apple-touch-icon" href="favicon.svg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="An amazing TeachLA React Website :D" />
+    <meta name="LSTM Learning Lab" content="A teachLA and AI collaboration to teach LSTMs" />
     <!-- TODO: In this file, update title and description!
     TODO: Update public/favicon.svg and public/favicon512.png
     Then delete me and only have the root div in index.html -->
